# Archi-VR-API

./: .gitignore  VERCEL_DEPLOYMENT.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: index.py
app/: app.py
app/api/v1/: router.py
app/api/v1/endpoints/: asset_route.py  waitlist_route.py
app/config/: api_key_config.py  app_config.py  db_config.py  resend_config.py
app/core/: logger.py  request_id_middleware.py
app/core/security/: api_key_dependency.py
app/db/: db.py
app/models/: __init__.py  asset.py  waitlist.py
app/services/asset/: asset_service.py
app/services/asset/dto/: asset_dto.py
app/services/asset/provider/: asset_provider.py  base.py
app/services/waitlist/: waitlist_service.py
app/services/waitlist/dto/: waitlist_dto.py
app/services/waitlist/provider/: base.py  waitlist_provider.py
app/shared/dto/: shared_dto.py
app/shared/event/: event_definition.py  event_dispatcher.py  event_subscriber.py
app/shared/service/email/: email_service.py
app/shared/service/email/dto/: email_dto.py
app/shared/service/resend/: resend_service.py
app/shared/service/resend/dto/: resend_dto.py
app/shared/service/resend/provider/: resend_provider.py
app/shared/templates/: template_provider.py  waitlist_template.html
app/shared/templates/dto/: template_dto.py
app/utils/: event_utility.py
tests/shared/resend/: test_resend_service.py
